added styles color

--- a/mylibrary/templates/registration/login.html
+++ b/mylibrary/templates/registration/login.html
@@ -14,6 +14,7 @@
 			margin: 0;
 			padding: 0;
 			height: 100%;
+			background-color: red;
 			
 		}
 		.user_card {
@@ -82,26 +83,26 @@
 				<div class="d-flex justify-content-center">
 
 
-					<h3 id="form-title">LOGIN</h3>
+					<h3 style="text-decoration: hovered; color:#6df75b" id="form-title"><b>LOGIN</b></h3>
 				</div>
 				<div class="d-flex justify-content-center form_container">
 					<form method="POST" action="">
                         {% csrf_token%}
 						<div class="input-group mb-3">
 							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
+								<span class="input-group-text"><i style="text-decoration: hovered; color:#6df75b" class="fas fa-user"></i></span>
 							</div>
 							<input type="text" name="username" placeholder="Username..." class="form-control">
 						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
+								<span class="input-group-text"><i style="text-decoration: hovered; color:#6df75b" class="fas fa-key"></i></span>
 							</div>
 								<input type="password" name="password" placeholder="Password..." class="form-control" >
 						</div>
 
 							<div class="d-flex justify-content-center mt-3 login_container">
-				 				<input class="btn login_btn" type="submit" value="Login">
+				 				<input  class="btn login_btn" type="submit" value="Login">
 				   			</div>
 					</form>
 
@@ -113,7 +114,7 @@
 
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
-						Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
+						Don't have an account, Sign Up <a style="text-decoration: hovered; color: blue" href="{% url 'register' %}" class="ml-2">Here</a>
 					</div>
 			
 				</div>
