--- a/mylibrary/templates/base.html
+++ b/mylibrary/templates/base.html
@@ -32,7 +32,9 @@
    {% block content %}
    {%endblock%}
   {% block scripts %}
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="./js/jquery-3.5.1.js"></script>
+       <script src="./js/script.js"></script>
+       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <!-- JQuery -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <!-- Bootstrap tooltips -->
