--- a/mylibrary/templates/registration/register.html
+++ b/mylibrary/templates/registration/register.html
@@ -13,6 +13,7 @@
 			margin: 0;
 			padding: 0;
 			height: 100%;
+			background-color: red;
 		
 		}
 		.user_card {
@@ -71,7 +72,7 @@
 		<div class="d-flex justify-content-center h-100">
 			<div class="user_card">
 				<div class="d-flex justify-content-center">
-					<h3 id="form-title"><b><i>REGISTER ACCOUNT</i></b></h3>
+					<h3 i style="text-decoration: hovered; color:#6df75b" id="form-title"><b><i>JOIN US</i></b></h3>
 				</div>
 				<div class="d-flex justify-content-center form_container">
 
@@ -80,28 +81,28 @@
 
 						<div class="input-group mb-3">
 							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
+								<span class="input-group-text"><i style="text-decoration: hovered; color:#6df75b" class="fas fa-user"></i></span>
 							</div>
 							     {{form.username}}
 
 						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
+								<span  class="input-group-text"><i style="text-decoration: hovered; color:#6df75b" class="fas fa-envelope-square"></i></span>
 							</div>
 							     {{form.email}}
 
 						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
+								<span  class="input-group-text"><i style="text-decoration: hovered; color:#6df75b" class="fas fa-key"></i></span>
 							</div>
 							     {{form.password1}}
 
 						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
+								<span  class="input-group-text"><i style="text-decoration: hovered; color:#6df75b" class="fas fa-key"></i></span>
 							</div>
 							     {{form.password2}}
 
@@ -117,7 +118,7 @@
                 
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
-						Already have an account? <a href="{% url 'login' %}" class="ml-2">Login</a>
+						Already have an account, Login <a style="text-decoration: hovered; color: blue" href="{% url 'login' %}" class="ml-2">Here</a>
 					</div>
 				</div>
 			</div>
