--- a/mylibrary/templates/index.html
+++ b/mylibrary/templates/index.html
@@ -24,7 +24,9 @@
                     <p>{{ books.description }}</p>
                     <p>{{ books.pub_date }}</p>
                     </p>
-
+                    <a class="btn btn-secondary btn-sm mt-1 mb-sm" href="{% url 'updateForm' books.id%}">Update</a>
+                    <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'deleteForm'  books.id%}">Delete</a>
+                    
                 </div>
             </div>
         </div>
