add add button for admin to add a new book in the library

--- a/mylibrary/templates/index.html
+++ b/mylibrary/templates/index.html
@@ -26,6 +26,7 @@
                     </p>
                     <a class="btn btn-secondary btn-sm mt-1 mb-sm" href="{% url 'updateForm' books.id%}">Update</a>
                     <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'deleteForm'  books.id%}">Delete</a>
+                    <a class="btn btn-success btn-sm mt-1 mb-1" href="{% url 'add' %}">Add</a>
                     
                 </div>
             </div>
