--- a/mylibrary/templates/index.html
+++ b/mylibrary/templates/index.html
@@ -20,6 +20,7 @@
                     <hr>
                     <p style="color: black; font-weight: 500;" class="card-text "><img src="{{image.profile.image.url}}"  class="nav-img mr-2" alt="">
                     By:{{ books.author }} <span style="float:right">{{books.pub_date|date}}</span>
+                    <p>{{ books.image}}</p>
                     <p>{{ books.name|title }}</p>
                     <p>{{ books.description }}</p>
                     <p>{{ books.pub_date }}</p>
